feat: Add preview functionality for reMarkable documents
- Introduced a new command for previewing documents in the remarkableExplorer.
- Updated package.json to include a new Preview command in the context menu.
- Enhanced the remarkableExplorer class to support automatic previews based on user settings.
- Implemented a method to convert .rm files to SVG format for previewing.
- Added error handling and logging for file operations and conversions.
- Created a new Python script for improved conversion of .rm files to SVG.
- Added configuration options for auto-preview and VS Code preview preferences.

--- a/package.json
+++ b/package.json
@@ -64,6 +64,11 @@
         "icon": "$(export)"
       },
       {
+        "command": "remarkableExplorer.preview",
+        "title": "Preview",
+        "icon": "$(eye)"
+      },
+      {
         "command": "remarkableExplorer.openSettings",
         "title": "Settings",
         "icon": "$(settings-gear)"
@@ -99,19 +104,24 @@
       ],
       "view/item/context": [
         {
-          "command": "remarkableExplorer.backup",
+          "command": "remarkableExplorer.preview",
           "when": "view == remarkableExplorer && viewItem == document",
           "group": "remarkable@1"
         },
         {
-          "command": "remarkableExplorer.rename",
+          "command": "remarkableExplorer.backup",
           "when": "view == remarkableExplorer && viewItem == document",
           "group": "remarkable@2"
         },
         {
-          "command": "remarkableExplorer.export",
+          "command": "remarkableExplorer.rename",
           "when": "view == remarkableExplorer && viewItem == document",
           "group": "remarkable@3"
+        },
+        {
+          "command": "remarkableExplorer.export",
+          "when": "view == remarkableExplorer && viewItem == document",
+          "group": "remarkable@4"
         }
       ]
     },
@@ -152,6 +162,16 @@
           "type": "boolean",
           "default": false,
           "description": "Show raw GUID-based file structure instead of parsed names"
+        },
+        "remarkableManager.preview.autoPreview": {
+          "type": "boolean",
+          "default": true,
+          "description": "Automatically preview documents when clicked in the tree view"
+        },
+        "remarkableManager.preview.useVSCodePreview": {
+          "type": "boolean",
+          "default": true,
+          "description": "Use VS Code's built-in preview capabilities when possible"
         }
       }
     }
